<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notification_text"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_text_validation"
        android:id="@+id/validate_detection_button"
        android:layout_gravity="center_horizontal"
        android:onClick="validate"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_text_dismiss"
        android:id="@+id/dismiss_detection_button"
        android:layout_gravity="center_horizontal"
        android:onClick="dismiss"/>
</LinearLayout>